<resources>
    <string name="app_name">TodoDemo</string>

    <!-- SingleTodo Spinner array -->
    <string-array name="friends">
    </string-array>

    <!-- Log In Screen texts -->
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>

    <!-- Buttons -->
    <string name="new_todo_btn">Create new ToDo</string>
    <string name="show_all_open_btn">Show all open ToDo´s</string>
    <string name="contacts_bnt">Contacts</string>
    <string name="join_requests_btn">Join requests</string>
    <string name="logout_btn">Log Out</string>
    <string name="publish_btn">Publish</string>
    <string name="add_todo_btn">Add ToDo</string>
    <string name="invite_friend_btn">Invite Friend</string>
    <string name="delete_todo_btn">Delete Todo</string>
    <string name="view_requests_btn">Requests</string>
    <string name="view_friends_btn">Friends</string>


    <!-- Miscs -->
    <string name="default_todo_title">Default Title</string>
    <string name="add_task_btn">Add Task</string>
    <string name="todo_title_tv">Add Title</string>
    <string name="placeholder">Placeholder</string>
    <string name="join_req_tv">Default</string>


    <!-- UserInfo -->
    <string name="user_email">Logged in as: </string>

    <!-- Testing -->
    <string name="join">Join</string>

</resources>
